<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/compassGlobalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFA45E"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="179dp">


        <TextView
            android:id="@+id/compassScore"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="#9AD2C9"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/score"
            android:textColor="#000000"
            android:textSize="27sp"/>

        <TextView
            android:id="@+id/compassTimer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#9AD2C9"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/timer"
            android:textColor="#000000"
            android:textSize="27sp"/>

        <TextView
            android:id="@+id/compassCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/compassScore"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="40sp"
            android:text="@string/city"
            android:textColor="#000000"
            android:textSize="35sp" />


        <ImageView
            android:id="@+id/compassView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/compassCity"
            android:contentDescription="@string/compas_description"
            android:src="@drawable/compas" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:translationX="165dp"
            android:translationY="365dp"
            android:rotation="-56"
            android:src="@drawable/fleche33"
            android:contentDescription="@string/fleche_compas" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>