<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/winGlobalFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFA45E"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="179dp"
        android:gravity="center">

        <TextView
            android:id="@+id/winTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/congratulation"
            android:textColor="#000000"
            android:textSize="50sp"/>

        <ImageView
            android:id="@+id/winCup"
            android:layout_width="91dp"
            android:layout_height="151dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/winTitle"
            android:src="@drawable/coupe"
            android:contentDescription="@string/coupe" />

        <TextView
            android:id="@+id/winScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/winCup"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="0dp"
            android:text="@string/score"
            android:textColor="#000000"
            android:textSize="40sp"/>


        <LinearLayout
            android:id="@+id/winButtonLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/winScore"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/leaveWin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#9AD2C9"
                android:text="@string/leave"
                android:textSize="22sp"
                android:textColor="#000000"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0.5dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/nextWin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#9AD2C9"
                android:text="@string/next_level"
                android:textSize="22sp"
                android:textColor="#000000"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="0.5dp"
                android:onClick="nextWinOnClick"
                tools:ignore="ButtonStyle,UsingOnClickInXml">
            </Button>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>