<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rankGlobalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFA45E">

        <TextView
            android:id="@+id/rankTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textSize="50sp"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp">
        </TextView>

        <LinearLayout
            android:id="@+id/typeRankLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rankTitle"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/classicRank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background_rank_btn"
                android:text="@string/classic"
                android:textColor="#000000"
                android:textSize="22sp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/sportRank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_rank_btn"
                android:text="@string/athletic"
                android:textSize="22sp"
                android:textColor="#000000"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="0.5dp"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/shareRank"
            android:layout_below="@+id/typeRankLayout"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rank_list"
            android:orientation="vertical">

            <ListView
                android:id="@+id/rankingListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="22sp"
                />

        </LinearLayout>




        <Button
            android:id="@+id/shareRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9AD2C9"
            android:text="@string/share"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/backRank">
        </Button>

        <Button
            android:id="@+id/backRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0.5dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#9AD2C9"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="22sp" />




    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>