<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/blue">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
    >

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            tools:ignore="LabelFor,NestedWeights"
            android:autofillHints=""
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1.5"
        >

        <ImageView
            android:id="@+id/avatarDisplayMainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/avatar_description"
            android:src="@drawable/test_bitmoji_3"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.2"
            tools:ignore="NestedWeights">

            <EditText
                android:id="@+id/pseudoSelectionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/pseudo_hint"
                android:textSize="30sp"
                android:background="@color/orange"
                tools:ignore="NestedWeights"
                android:autofillHints=""
                android:inputType="textPersonName" />
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/endPseudoSelection"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:layout_weight="0.8"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/suivant_button"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>



</LinearLayout>
