<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/compassGlobalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:text="@string/parametres"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            >
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Textes en grand"
                android:textSize="33sp"
                android:layout_marginHorizontal="20dp"
                />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mode Discret"
                android:textSize="33sp"
                android:layout_marginHorizontal="20dp"
                />



            <LinearLayout
                android:id="@+id/param_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_button"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="20dp"
                >

                <TextView
                    android:id="@+id/consigne_niveau_musique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"
                    android:text="Niveau Musique :"
                    android:textColor="#000000"
                    android:textSize="33sp" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/ctrlMusic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:max="100"
                    android:min="0"
                    android:progress="10" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/param_son"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/param_music"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_button"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="20dp"
                >

                <TextView
                    android:id="@+id/consigne_niveau_son"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Niveau Son :"
                    android:textColor="#000000"
                    android:textSize="33sp" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/ctrlSon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:min="0"
                    android:progress="10" />

            </LinearLayout>


            <Button
                android:id="@+id/btnBoutique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/round_button"
                android:padding="5dp"
                android:text="@string/boutique_button"
                android:textColor="@color/black"
                android:textSize="33sp"
                android:layout_marginVertical="10dp"
                />

            <Button
                android:id="@+id/btnTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/round_button"
                android:padding="5dp"
                android:text="@string/tutoriel_button"
                android:textColor="@color/black"
                android:textSize="33sp"
                android:layout_marginVertical="10dp"
                />


            <EditText
                android:id="@+id/pseudoModif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:autofillHints="Pseudo"
                android:background="@drawable/round_button"
                android:inputType="textPersonName"
                android:text="@string/pseudo_consigne"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="40sp"
                tools:ignore="LabelFor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="0.2">
            <Button
                android:id="@+id/btnAppliquer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/btnRetour"
                android:background="@drawable/round_button"
                android:text="@string/appliquer_button"
                android:textColor="@color/black"
                android:textSize="33sp"
                android:paddingHorizontal="5dp"/>


            <Button
                android:id="@+id/btnRetour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/retour_button"
                android:textColor="@color/black"
                android:textSize="33sp"
                android:paddingHorizontal="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>